--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>TECHNOLOGIN</title>
+<title>Crypto-Currency|TECHNOLOGIN</title>
 <style>
 <style>
 body {
@@ -88,5 +88,6 @@ However, crypto trading expert Adam is largely optimistic about the future <b><i
 <div class="footer">
 <p style="font-size:120%">Stay in Touch with Us on Twitter(@S_Shariq02) | Instagram(@syed_shariq02) | WhatsApp | Gmail(syed.ssu2002) | Pinterest(@syedssu2002)  </p>
 </div>
+</body>
 </html>
 	
